# geo-guard

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
backend/: app.py  database.py  logic.py  models.py  ussd_service.py  weather_service.py  whatsapp_service.py
data/processed/: kenya_weather_history.csv
frontend/: dashboard.py
frontend/components/: alerts.py  map_view.py
scripts/: generate_history.py  seed_db.py  train_model.py
