[project]
name = "geo-guard-kenya"
version = "0.1.0"
description = "Real-time disaster early warning system for Floods, Droughts, and Landslides."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.128.0",
    "folium>=0.20.0",
    "geoalchemy2>=0.18.1",
    "geopandas>=1.1.2",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.53.0",
    "streamlit-folium>=0.26.1",
    "uvicorn>=0.40.0",
]
